force-app/main/default/objects/Contact/fields/Processed_By_Furure__c.field-meta.xml
<CustomField>
    <fullName>Processed_By_Furure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed By Furure</label>
    <type>Checkbox</type>
</CustomField>