force-app/main/default/objects/Contact/fields/Processed_By_Queue__c.field-meta.xml
<CustomField>
    <fullName>Processed_By_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed By Queue</label>
    <type>Checkbox</type>
</CustomField>